--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+    <meta http-equiv="Content-Type" content="text/html;charset=windows-1252">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
     </thead>
     <tbody>
         <tr>
-            <td>51</td>
- <td>84% <div class="coverage_bar"><div class="coverage_complete width-84"></div><div class="coverage_legend">1854/2220</div></div></td>
-            <td>71% <div class="coverage_bar"><div class="coverage_complete width-71"></div><div class="coverage_legend">929/1300</div></div></td>
-            <td>84% <div class="coverage_bar"><div class="coverage_complete width-84"></div><div class="coverage_legend">929/1100</div></div></td>
+            <td>1</td>
+ <td>95% <div class="coverage_bar"><div class="coverage_complete width-95"></div><div class="coverage_legend">19/20</div></div></td>
+            <td>84% <div class="coverage_bar"><div class="coverage_complete width-84"></div><div class="coverage_legend">26/31</div></div></td>
+            <td>84% <div class="coverage_bar"><div class="coverage_complete width-84"></div><div class="coverage_legend">26/31</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -43,27 +43,11 @@
     <tbody>
 
         <tr>
-            <td><a href="./org.apache.commons.io.input/index.html">org.apache.commons.io.input</a></td>
-            <td>30</td>
- <td><div class="coverage_percentage">85% </div><div class="coverage_bar"><div class="coverage_complete width-85"></div><div class="coverage_legend">1159/1359</div></div></td>
-            <td><div class="coverage_percentage">77% </div><div class="coverage_bar"><div class="coverage_complete width-77"></div><div class="coverage_legend">653/846</div></div></td>
-            <td><div class="coverage_percentage">88% </div><div class="coverage_bar"><div class="coverage_complete width-88"></div><div class="coverage_legend">653/745</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./org.apache.commons.io.input.buffer/index.html">org.apache.commons.io.input.buffer</a></td>
-            <td>3</td>
- <td><div class="coverage_percentage">43% </div><div class="coverage_bar"><div class="coverage_complete width-43"></div><div class="coverage_legend">59/137</div></div></td>
-            <td><div class="coverage_percentage">34% </div><div class="coverage_bar"><div class="coverage_complete width-34"></div><div class="coverage_legend">42/124</div></div></td>
-            <td><div class="coverage_percentage">79% </div><div class="coverage_bar"><div class="coverage_complete width-79"></div><div class="coverage_legend">42/53</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./org.apache.commons.io.output/index.html">org.apache.commons.io.output</a></td>
-            <td>18</td>
- <td><div class="coverage_percentage">88% </div><div class="coverage_bar"><div class="coverage_complete width-88"></div><div class="coverage_legend">636/724</div></div></td>
-            <td><div class="coverage_percentage">71% </div><div class="coverage_bar"><div class="coverage_complete width-71"></div><div class="coverage_legend">234/330</div></div></td>
-            <td><div class="coverage_percentage">77% </div><div class="coverage_bar"><div class="coverage_complete width-77"></div><div class="coverage_legend">234/302</div></div></td>
+            <td><a href="./org.example/index.html">org.example</a></td>
+            <td>1</td>
+ <td><div class="coverage_percentage">95% </div><div class="coverage_bar"><div class="coverage_complete width-95"></div><div class="coverage_legend">19/20</div></div></td>
+            <td><div class="coverage_percentage">84% </div><div class="coverage_bar"><div class="coverage_complete width-84"></div><div class="coverage_legend">26/31</div></div></td>
+            <td><div class="coverage_percentage">84% </div><div class="coverage_bar"><div class="coverage_complete width-84"></div><div class="coverage_legend">26/31</div></div></td>
         </tr>
 
      </tbody>
